--- a/src/Makefile.cmathSrcs
+++ b/src/Makefile.cmathSrcs
@@ -20,4 +20,5 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = get_collision get_angle_from_vectors get_angle_from_vector
+SRCS = get_collision get_angle_from_vectors get_angle_from_vector \
+		get_vector_from_angle dot_vectors get_vector_magnitude
