--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,15 @@
 		"chrono": "c",
 		"limits": "c",
 		"ratio": "c",
-		"__node_handle": "c"
+		"__node_handle": "c",
+		"__bit_reference": "c",
+		"__hash_table": "c",
+		"__split_buffer": "c",
+		"array": "c",
+		"initializer_list": "c",
+		"list": "c",
+		"string_view": "c",
+		"unordered_map": "c",
+		"vector": "c"
 	}
 }
