--- a/src/Makefile.cmathSrcs
+++ b/src/Makefile.cmathSrcs
@@ -22,4 +22,4 @@ FT_SRCS =
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
 SRCS = get_collision get_angle_from_vectors get_angle_from_vector \
 		get_vector_from_angle dot_vectors get_vector_magnitude \
-		get_vector_from_points
+		get_vector_from_points get_distance calc_vfov
