--- a/src/Makefile.map_parseSrcs
+++ b/src/Makefile.map_parseSrcs
@@ -34,7 +34,8 @@ WAD_SRCS = parse_wad \
 			parse_wad_sectors \
 			parse_wad_reject \
 			parse_wad_blockmap \
-			parse_wad_dssound
+			parse_wad_dssound \
+			convert_wad
 WAD_SRCS := $(WAD_SRCS:%=WAD/%)
 
 MAP_SRCS =
