Build Up To New Loop System
Added Cmath functions.
Allocating player on init.

--- a/resources/config/ui/hud.ui.yml
+++ b/resources/config/ui/hud.ui.yml
@@ -1,6 +1,6 @@
 - panel: hud
   - image: hud_bg
-    - color: #FFFFFF
+    - color: #000000
   - text_block: angle
     - pos: 0.1, 0.1
     - dim: 0.1, 0.1
