--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,8 @@
 		"list": "c",
 		"string_view": "c",
 		"unordered_map": "c",
-		"vector": "c"
+		"vector": "c",
+		"memory": "c",
+		"utility": "c"
 	}
 }
