--- a/src/Makefile.sdl_threadSrcs
+++ b/src/Makefile.sdl_threadSrcs
@@ -16,6 +16,17 @@ PREFIX = sdl_
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = del_pool done_pool join_pool manage_thread new_pool new_task new_thread \
-	manage_thread_worker que_pool_back que_pool_front que_pool run_task \
-	manage_thread_central complete_task
+SRCS = new_pool \
+	del_pool \
+	done_pool \
+	join_pool \
+	que_pool_back \
+	que_pool_front \
+	que_pool \
+	new_thread \
+	manage_thread_central \
+	manage_thread_worker \
+	new_task \
+	get_task \
+	run_task \
+	complete_task
