--- a/src/Makefile.cmathSrcs
+++ b/src/Makefile.cmathSrcs
@@ -23,4 +23,4 @@ FT_SRCS =
 SRCS = get_collision get_angle_from_vectors get_angle_from_vector \
 		get_vector_from_angle dot_vectors get_vector_magnitude \
 		get_vector_from_points get_distance calc_vfov mod_float \
-		clamp_float wrap_float get_perps
+		clamp_float wrap_float get_perps wrap_angle intersect3
