--- a/src/Makefile.rendererSrcs
+++ b/src/Makefile.rendererSrcs
@@ -20,5 +20,4 @@ FT_SRCS =
 
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
-SRCS = render_3d load_textures get_texture render_rooms \
-		get_bunches get_closest render_part add_wall_to_out get_sector
+SRCS = render_3d load_textures get_texture
