--- a/src/Makefile.playerSrcs
+++ b/src/Makefile.playerSrcs
@@ -21,4 +21,4 @@ FT_SRCS =
 # All SRCSPREFIX source files for the sublib (relative to src/$(SRCFOLDER)/)
 # These will be automaticly prefixed with $(PREFIX) and sufixed with .c
 SRCS = \
-	player_move
+	player_move player_col
